--- a/front_end/studyplan.html
+++ b/front_end/studyplan.html
@@ -146,6 +146,7 @@
         </aside>
         <main class="main-content">
             <h1>AI Study Plan Generator</h1>
+            <h3>Get Your AI Generated StudyPlan Below:</h3>
             <div class="card">
                 <form id="studyPlanForm" class="study-plan-form">
                     <div>
