--- a/front_end/feedback.html
+++ b/front_end/feedback.html
@@ -51,7 +51,7 @@
         </aside>
     <div class="container">
         <h1>Feedback</h1>
-        <h3>We appreciate your feedback! Let us know how we can improve 👍</h3>
+        <h3>We appreciate your feedback! Let us know how we can Improve 👍</h3>
         <br>
         <div class="card">
             <form>
