--- a/front_end/exams.html
+++ b/front_end/exams.html
@@ -161,6 +161,47 @@
                         </select>
                     </div>
                 </div>
+                <div class="form-group">
+                    <div class="select-wrapper">
+                        <input 
+                            type="text" 
+                            id="roll-number" 
+                            placeholder="ENTER YOUR ROLL NO"
+                            style="
+                                appearance: none;
+                                width: 100%;
+                                padding: 15px;
+                                border: 2px solid #fff;
+                                background-color: #111;
+                                color: #fff;
+                                border-radius: 8px;
+                                font-size: 18px;
+                                transition: all 0.3s ease;
+                            "
+                        />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <button 
+                        id="search-button" 
+                        onclick="searchResults()"
+                        style="
+                            width: 100%;
+                            padding: 15px;
+                            border: none;
+                            background-color: white;
+                            color: black;
+                            border-radius: 8px;
+                            font-size: 18px;
+                            cursor: pointer;
+                            transition: background-color 0.3s ease;
+                        "
+                        onmouseover="this.style.backgroundColor='#218838'"
+                        onmouseout="this.style.backgroundColor='#28a745'"
+                    >
+                        Search
+                    </button>
+                </div>
                 <div id="exam-results" style="display: none;">
                     <h3 id="exam-title"></h3>
                     <table class="table">
