--- a/front_end/settings.html
+++ b/front_end/settings.html
@@ -8,82 +8,49 @@
 </head>
 <body>
     <div class="dashboard">
-        <aside class="sidebar">
-            <h2 style="margin-bottom: 20px;">Student Portal</h2>
-            <nav>
-                <a href="dashboard.html" class="nav-link">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 3v18h18"/><path d="M18.7 8l-5.1 5.2-2.8-2.7L7 14.3"/></svg>
-                    Overview
-                </a>
-                <a href="exams.html" class="nav-link">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"/><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"/></svg>
-                    Exams
-                </a>
-                <a href="learningpath.html" class="nav-link">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"/><path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"/></svg>
+        <div id="sidebar-include"></div>
 
-                   Learning Path
-                </a>
-                <a href="studyplan.html" class="nav-link">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 8v4l3 3m6-3a9 9 0 1 1-18 0 9 9 0 0 1 18 0z"/></svg>
-                    AI StudyPlan
-                </a>
-                <a href="chatbot.html" class="nav-link">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/></svg>
-
-                    Chat Bot
-                </a>
-                <a href="profile.html" class="nav-link">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg>
-                    Profile
-                </a>
-                <a href="settings.html" class="nav-link">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="3"/><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"/></svg>
-                    Settings
-                </a>
-                <a href="feedback.html" class="nav-link">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <path d="M12 20h9"/><path d="M12 4h9"/><path d="M3 12h18"/><path d="M5 9l-4 3 4 3"/>
-                    </svg>
-                    Feedback
-                </a>
-            </nav>
-        </aside>
         <main class="main-content">
             <h1>Settings</h1>
             <div class="card">
                 <h2>Notifications</h2>
                 <div style="display: flex; justify-content: space-between; margin-bottom: 10px;">
                     <label for="emailNotifications">Email Notifications</label>
-                    <!-- <input type="checkbox" id="emailNotifications"> -->
                     <label class="switch">
                         <input type="checkbox">
                         <span class="slider"></span>
-                      </label>
+                    </label>
                 </div>
                 <div style="display: flex; justify-content: space-between; margin-bottom: 10px;">
                     <label for="smsNotifications">SMS Notifications</label>
-                    <!-- <input type="checkbox" id="smsNotifications"> -->
                     <label class="switch">
                         <input type="checkbox">
                         <span class="slider"></span>
-                      </label>
+                    </label>
                 </div>
                 <div style="display: flex; justify-content: space-between; margin-bottom: 10px;">
                     <label for="examReminders">Exam Reminders</label>
-                    <!-- <input type="checkbox" id="examReminders"> -->
                     <label class="switch">
                         <input type="checkbox">
                         <span class="slider"></span>
-                      </label>
+                    </label>
                 </div>
             </div>
             <div class="card" style="margin-top: 20px;">
                 <h2>Thank You</h2>
-               <a href="index.html"> <button class="btn" style="background-color: #dc3545; color: white;">Logout</button></a>
+                <a href="index.html">
+                    <button class="btn" style="background-color: #dc3545; color: white;">Logout</button>
+                </a>
             </div>
         </main>
     </div>
+
+    <script>
+      fetch("sidebar.html")
+        .then(response => response.text())
+        .then(data => {
+          document.getElementById("sidebar-include").innerHTML = data;
+        });
+    </script>
 </body>
 </html>
-
