--- a/front_end/index.html
+++ b/front_end/index.html
@@ -11,7 +11,7 @@
         <h1 style="font-size: 5rem; margin-bottom: 2rem;">Student Evaluation System</h1>
         <p style="font-size: 1.2rem; margin-bottom: 2rem; max-width: 600px;">
             Welcome to our AI-powered Student Evaluation System. This platform provides a comprehensive solution for
-            managing exams, tracking performance, and getting instant assistance through our AI chatbot.
+            managing exams, tracking performance, and getting instant assistance through our AI chatbot..
         </p>
         <a href="login.html" class="btn">Get Started</a>
     </div>
